--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <p id="temperature">Temperature: <span>---</span>°F</p>
             <p id="condition">Condition: <span>---</span></p>
         </div>
+    <div id='video-container"> </div>    
     </div>
     <script src="script.js"></script> <!-- Link to your JavaScript file -->
 </body>
